@@ -904,6 +904,14 @@ public class ItemData extends StdWebMacro
 							old="checked";
 						str.append(old);
 						break;
+					case CORPSEDROP:
+						if(firstTime)
+							old=CMath.bset(I.basePhyStats().sensesMask(), PhyStats.SENSE_CORPSEDROP)?"checked":"";
+						else
+						if(old.equals("on"))
+							old="checked";
+						str.append(old);
+						break;
 					case ISKEY: // is key
 						if(I instanceof DoorKey)
 							return "true";
