@@ -446,13 +446,14 @@
 			<INPUT TYPE=CHECKBOX NAME=ISINVISIBLE @ItemData?ISINVISIBLE@>Is Invisible<BR>
 			<INPUT TYPE=CHECKBOX NAME=ISHIDDEN @ItemData?ISHIDDEN@>Is Hidden<BR>
 			<INPUT TYPE=CHECKBOX NAME=ISUNSEEN @ItemData?ISUNSEEN@>Is Unseeable<BR>
-			</FONT></TD><TD WIDTH=50%><FONT COLOR=WHITE>
 			<INPUT TYPE=CHECKBOX NAME=ISBONUS @ItemData?ISBONUS@>Is Magical<BR>
+			</FONT></TD><TD WIDTH=50%><FONT COLOR=WHITE>
 			<INPUT TYPE=CHECKBOX NAME=ISLIGHT @ItemData?ISLIGHT@>Is Glowing (burning)<BR>
 			<INPUT TYPE=CHECKBOX NAME=ISEVIL @ItemData?ISEVIL@>Is Evil<BR>
 			<INPUT TYPE=CHECKBOX NAME=ISGOOD @ItemData?ISGOOD@>Is Good<BR>
 			<INPUT TYPE=CHECKBOX NAME=NONLOCATABLE @ItemData?NONLOCATABLE@>Hidden from Locate Object<BR>
 			<INPUT TYPE=CHECKBOX NAME=BLENDEDVIEW @ItemData?BLENDEDVIEW@>Blended into Room Display<BR>
+			<INPUT TYPE=CHECKBOX NAME=CORPSEDROP @ItemData?CORPSEDROP@>Corpse drop only<BR>
 			@if?ItemData?ISCONTAINER@
 			<INPUT TYPE=CHECKBOX NAME=CONTENTSACCESS @ItemData?CONTENTSACCESS@>Contents Access<BR>
 			@endif@
