@@ -6,7 +6,8 @@
  4. New disable flag: SHOWXPGAINS
  5. New prowess option: EXP-WORDS (for showing rp xp)
  6. SHOUT (+SHOUTAT) (+SHOUTTO) now commands like Yell.
- 
+ 7. Items on mobs can now be marked as variable corpse drops (like variable eq, but only in corpse)
+ 8. Account command now shows total hours played across all characters.
 
 # Build 5.11.0.1 Release 10/28/2025
   1. Proxy server reconnects now bypass conn-spam blocks
